# C-Interpreter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AstPrinter.h  CMakeLists.txt  SparkleCode.cpp  SparkleCode.h  config.h  main.cpp
src/scanner/: CMakeLists.txt  Scanner.cpp  Scanner.h  Token.cpp  Token.h  TokenType.h
src/tool/: genExpr.py
